# mex-dll-interface-example

./: .gitignore  CMakeLists.txt  readme.md
DllSubproject/: CMakeLists.txt
DllSubproject/inc/: mylib.hpp
DllSubproject/src/: mylib.cpp
src/: mex_add_example.cpp
